static/css/tables.css
.width100 {
  width: 100%;
}

.table {
  color: inherit;
  margin-bottom: 0;
}

table {
  border-collapse: collapse;
}

th {
  border: solid 1px var(--warm-gray-200);
  font-weight: 600;
  padding: 8px 15px !important;
  vertical-align: top;
}

td {
  border: solid 1px var(--warm-gray-200);
  padding: 8px 15px !important;
  vertical-align: top;
}

.numeric {
  text-align: right;
}

.total {
  font-weight: 600;
}

th {
  font-weight: 500;
}

.totals-table {
  align-items: start;
  display: flex;
  flex-direction: row;
  justify-content: right;
}

.totals-table table {
  margin: 1.5rem 0 0 1.5rem;
  min-width: 350px;
}

